syntax = "proto3";

option csharp_namespace = "GrpcServer.Protos";

service Customer{
	rpc GetCustomerInfo (CustomerLookModel) returns (CustomerModel); // unary rpc
	rpc GetNewCustomers (NewCustomerRequest) returns (stream CustomerModel); // Server streaming rpc
}

message NewCustomerRequest{

}
message CustomerLookModel{
	int32 userId = 1;
}

message CustomerModel{
	string firstName = 1;
	string lastName = 2;
	string emailAddress = 3;
	bool isAlive = 4;
	int32 age= 5;
}