syntax = "proto3";

option csharp_namespace = "GrpcServer.Protos";

package serverStreaming;

service ServerStreaming{
	rpc ServerStreamingDemo(Test) returns (stream Test);
	rpc ClientStreamingDemo(stream Test) returns(Test);
}
message Test{
	string TestMessage = 1;
}